# clio

./: .gitignore  Makefile.am  README.md  configure.ac
rfc/: manager
src/: bits.h  core.c  irc.c  irc.h  manager.c  manager.h  numerics.h  server.c
t/: 00-parse.c  01-memory.c  05-msg.c  06-wildcard.c  11-manager.c  test.h
